# Group60_mlops

./: .gitignore  Makefile  README.md  cloudbuild.yaml  cloudbuild.yml  cloudbuild_inference.yaml  data.dvc  docker-compose.yaml  flaskbuild.yaml  ml_project_data.dvc  mlops_project_data.dvc  models.dvc  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_inference.txt  requirements_tests.txt
.dvc/: config
.github/.workflows/: tests.yml
.github/workflows/: codecheck.yml  codetest.yml
.hydra/: config.yaml  hydra.yaml
Group60_mlops/: .gitignore  README.md  requirements.txt
Group60_mlops/dockerfiles/: predict_model.dockerfile  train_model.dockerfile
Group60_mlops/notebooks/: bert-with-fastai-example.ipynb
Group60_mlops/toxic_comments/: __init__.py  config_train.yaml  train_model.py
dockerfiles/: flaskapi.dockerfile  inference_streamlit.dockerfile  predict_model.dockerfile  train_model.dockerfile  web.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
local_hosting/: dtm.py  handler.py  index_name.py  index_to_name.json  setup_config_serve.json
local_hosting/fastapi/: fast.py  requirements.txt
reports/: README.md
serving/: dtm.py  index_name.py  sample_text.txt  setup_config_serve.json
slowapi/: ask.py  main.py  requirements.txt
tests/: test_data.py  test_model.py
tests/test_data_drift/: README.md  config.yaml  data_drift_k_labels.py  data_drift_single_label.py
toxic_comments/: __init__.py  config_predict.yaml  config_train.yaml  flaskbuild.yaml  predict_model.py  prune_quantize.py  train_model.py
(+23 files in other folders)
